Personalize portfolio for Arva - remove blog, add experience page, update projects and about sections

--- a/content/blog/creating-a-killer-github-profile-readme-part-2.mdx
+++ b/content/blog/creating-a-killer-github-profile-readme-part-2.mdx
@@ -87,7 +87,7 @@ await fs.writeFile("README.md", readme);
 
 At this point I could run `node .` at the root of my repository and the `index.js` file worked its magic. Opening the `README.md` file, I saw the dynamic quote at the bottom of the file.
 
-If you want to reference my full `index.js` file, click [HERE](https://github.com/braydoncoyer/braydoncoyer/blob/main/index.js).
+If you want to reference my full `index.js` file, click [HERE](https://github.com/Arva-Kachwala/braydoncoyer/blob/main/index.js).
 
 ### Creating the Workflow
 
@@ -208,4 +208,4 @@ There we go! You should now have all of the tools required to make a killer GitH
 
 Don't forget that your profile on GitHub is like your portfolio -- use it as a platform to highlight what makes you unique as a developer!
 
-Thanks for reading! If you liked this article and want more content like this, read some of my other blog posts and make sure to follow me on [Twitter](https://twitter.com/BraydonCoyer)!
+Thanks for reading! If you liked this article and want more content like this, read some of my other blog posts and make sure to follow me on [LinkedIn](https://www.linkedin.com/in/arva-kachwala/)!
