--- a/content/blog/creating-a-killer-github-profile-readme-part-1.mdx
+++ b/content/blog/creating-a-killer-github-profile-readme-part-1.mdx
@@ -16,7 +16,7 @@ I've known about this for a few months now but only recently dove in. And, well.
 
 ![README Gif](https://media.giphy.com/media/tzFjGxURDcjzVoTusV/giphy.gif)
 
-[Check out my GitHub profile here](https://github.com/braydoncoyer).
+[Check out my GitHub profile here](https://github.com/Arva-Kachwala).
 
 Many developers, I believe, inject a bunch of 'cool' widgets and badges in their profile instead of realizing that their GitHub profile is very much like a portfolio — it should highlight _what makes you unique_.
 
@@ -99,8 +99,8 @@ To create your own visits badge, copy the 'Visits Badge' markdown content below 
 
 ```markdown
 [![Visits Badge](https://badges.pufler.dev/visits/braydoncoyer/braydoncoyer)](https:braydoncoyer.dev)
-[![Twitter Badge](https://img.shields.io/badge/Twitter-Profile-informational?style=flat&logo=twitter&logoColor=white&color=1CA2F1)](https://twitter.com/BraydonCoyer)
-[![LinkedIn Badge](https://img.shields.io/badge/LinkedIn-Profile-informational?style=flat&logo=linkedin&logoColor=white&color=0D76A8)](https://www.linkedin.com/in/braydon-coyer/)
+[![Twitter Badge](https://img.shields.io/badge/Twitter-Profile-informational?style=flat&logo=twitter&logoColor=white&color=1CA2F1)](https://www.linkedin.com/in/arva-kachwala/)
+[![LinkedIn Badge](https://img.shields.io/badge/LinkedIn-Profile-informational?style=flat&logo=linkedin&logoColor=white&color=0D76A8)](https://www.linkedin.com/in/arva-kachwala/)
 [![CodePen Badge](https://img.shields.io/badge/CodePen-Profile-informational?style=flat&logo=codepen&logoColor=white&color=black)](https://codepen.io/braydoncoyer)
 ```
 
@@ -138,27 +138,27 @@ Along with my most recent blog posts, I wanted to shift the spotlight to a few o
 ```
 <!-- Pinned Repositories -- >
 
-<a href="https://github.com/braydoncoyer/tailwindcss-v2-dark-mode-template">
+<a href="https://github.com/Arva-Kachwala/tailwindcss-v2-dark-mode-template">
   <img align="center" style="margin:1rem 0.5rem" src="https://github-readme-stats..." />
 </a>
 
 <br>
 
-<a href="https://github.com/braydoncoyer/ng-limeade">
+<a href="https://github.com/Arva-Kachwala/ng-limeade">
   <img align="center" style="margin:0.5rem" src="https://github-readme-stats..." />
 </a>
 
-<a href="https://github.com/braydoncoyer/officeapi">
+<a href="https://github.com/Arva-Kachwala/officeapi">
   <img align="center" style="margin:0.5rem" src="https://github-readme-stats..." />
 </a>
 
 <!-- GitHub Stats -- >
 
-<a href="https://github.com/braydoncoyer">
+<a href="https://github.com/Arva-Kachwala">
   <img align="center" style="margin:0.5rem" src="https://github-readme-stats..." />
 </a>
 
-<a href="https://github.com/braydoncoyer">
+<a href="https://github.com/Arva-Kachwala">
   <img align="center" style="margin:0.5rem" src="https://github-readme-stats..." alt="Braydon's GitHub Stats" />
 </a>
 ```
@@ -211,4 +211,4 @@ With that, the static content is complete and satisfies the goals I listed for m
 
 In the next article, I’ll show you how I created my GitHub Action workflow and injected the dynamic content into the `README.md` file!
 
-Thanks for reading! If you liked this article and want more content like this, read some of my other articles and make sure to follow me on [Twitter](https://twitter.com/BraydonCoyer)!
+Thanks for reading! If you liked this article and want more content like this, read some of my other articles and make sure to follow me on [LinkedIn](https://www.linkedin.com/in/arva-kachwala/)!
