--- a/content/blog/how-to-dynamically-create-open-graph-images-with-cloudinary-and-next-js.mdx
+++ b/content/blog/how-to-dynamically-create-open-graph-images-with-cloudinary-and-next-js.mdx
@@ -20,7 +20,7 @@ In this article, I'll show you how to leverage the powerful Cloudinary API to cr
 
 Want to know the secret right away? We'll be passing various variables to the Cloudinary image request URL which will transform a template image and add an article title and banner image.
 
-Read on to learn how to do this, or check out my [open source blogfolio on GitHub](https://github.com/braydoncoyer/braydoncoyer.dev) and see how I accomplished this.
+Read on to learn how to do this, or check out my [open source blogfolio on GitHub](https://github.com/Arva-Kachwala/braydoncoyer.dev) and see how I accomplished this.
 
 ## What are Open Graph meta tags?
 
@@ -109,7 +109,7 @@ export function Container(props) {
     description: "A description about my site",
     imageUrl: "path-to-an-image",
     type: 'article'
-    twitterHandle: "https://twitter.com/BraydonCoyer",
+    twitterHandle: "https://www.linkedin.com/in/arva-kachwala/",
     canonicalUrl: `https://braydoncoyer.dev${router.asPath}`,
     date: null,
     ...customMeta // this replaces any properties that we pass to the component as props
@@ -322,7 +322,7 @@ Once your application is published, grab the full article slug and paste it into
 
 And with that - you've now created a system that dynamically creates Open Graph images for social outlets using Cloudinary and Next.js!
 
-If you've made it this far and completed this article, I'd love for you to reach out to me on [Twitter](https://twitter.com/BraydonCoyer) and send me a link to your blog or website so I can see the Open Graph images at work!
+If you've made it this far and completed this article, I'd love for you to reach out to me on [LinkedIn](https://www.linkedin.com/in/arva-kachwala/) and send me a link to your blog or website so I can see the Open Graph images at work!
 
 ### References
 
